# eitviewer

./: .gitignore  CMakeLists.txt  README.md
scripts/: test_conds.py
src/: ConductivityViewer.cpp  ConductivityViewer.h  main.cpp
